<resources>
    <string name="app_name">TodoList</string>
    <string name="task_list_toolbar">Tasks List</string>
    <string name="task_list_button_refresh">Refresh Tasks</string>
    <string name="task_list_button_add">New Task</string>
    <string name="task_list_button_done">Done</string>
    <string name="task_list_button_undo">Undo</string>
    <string name="task_list_button_delete">Delete</string>
    <string name="task_add_toolbar">Tasks Add</string>
    <string name="task_add_form_name">Name *</string>
    <string name="task_add_form_name_hint">Inform the task name</string>
    <string name="task_add_form_note">Notes</string>
    <string name="task_add_form_note_hint">Inform the task notes</string>
    <string name="task_add_button">Add Task</string>
    <string name="task_add_name_error">Invalid name! Fill at least 3 characters</string>
    <string name="tasks_empty">No Tasks</string>
    <string name="error_unexpected_message">Something went wrong, please try again.</string>
</resources>
